# music-player

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.cpp  files.cpp  functions.cpp  functions.h  functions.h.gch  main.cpp  music_player.h  prog  server.cpp  server_functions.cpp  server_functions.h  signals.h
.github/workflows/: build.yml  make.yml
src/: CMakeLists.txt  client.cpp  client_functions.cpp  client_functions.h  client_functions.hpp  gui.cpp  gui_functions.cpp  gui_functions.h  server.cpp  server_functions.cpp  server_functions.h  server_functions.hpp  signals.h  signals.hpp
